# fourthClimbotSim

./: README.md
mr_simulation/: CMakeLists.txt
mr_simulation/config/: climbot6d_path_list.txt  climbot6d_simulation_config.yaml  simulation_environment.yaml
mr_simulation/launch/: start_new_climbot6d_simulation.launch
mr_simulation/src/: climbot6d_control_robot_by_conf_file.cpp  generate_environment.cpp  generate_environment.h  generate_environment_by_yaml.cpp  new_modular_robots_simulation.cpp  new_modular_robots_simulation.h  static_world_A_broadcaster.cpp
robot_description/launch/: climbot6d_display.launch  climbot6d_single_display_g0.launch  climbot6d_single_display_g7.launch
robot_description/robots/: climbot6d.urdf.xacro  climbot6d_g0.urdf.xacro  climbot6d_g7.urdf.xacro
robot_description/rviz/: climbot6d.rviz
robot_description/urdf/: pole.urdf  sleeve_link_4th.urdf.xacro
robot_description/urdf/T_module_4th/: T_invert_4th.urdf.xacro
